--- a/SmolVLMNotes/package.json
+++ b/SmolVLMNotes/package.json
@@ -31,8 +31,10 @@
     "@types/react": "^19.1.4",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-plugin-react-native-web": "^0.20.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "parcel": "^2.11.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
