--- a/SmolVLMNotes/package.json
+++ b/SmolVLMNotes/package.json
@@ -11,9 +11,15 @@
     "web": "parcel index.html"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/stack": "^7.3.2",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
@@ -21,12 +27,14 @@
     "@babel/plugin-transform-runtime": "^7.27.1",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.27.1",
+    "@parcel/optimizer-terser": "^2.15.1",
+    "@parcel/transformer-babel": "^2.15.1",
     "@react-native-community/cli": "18.0.0",
     "@react-native-community/cli-platform-android": "18.0.0",
     "@react-native-community/cli-platform-ios": "18.0.0",
     "@react-native/babel-preset": "0.79.2",
     "@react-native/eslint-config": "0.79.2",
-    "@react-native/metro-config": "0.79.2",
+    "@react-native/metro-config": "^0.79.2",
     "@react-native/typescript-config": "0.79.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.4",
