--- a/SmolVLMNotes/.parcelrc
+++ b/SmolVLMNotes/.parcelrc
@@ -1,9 +1,6 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/transformer-babel"]
-  },
-  "optimizers": {
-    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/optimizer-terser"]
+    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/transformer-js"]
   }
 } 
